--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -19,9 +19,9 @@ steps:
     scriptType: 'bash'
     scriptLocation: 'inlineScript'
     inlineScript: |
-      docker build -t appcontain.azurecr.io/appcontain:latest
+      docker build -t appcontain.azurecr.io/loginregistration:latest
       az acr login --name appcontain
-      docker push appcontain.azurecr.io/appcontain:latest
+      docker push appcontain.azurecr.io/loginregistration:latest
   
 - task: KubernetesManifest@1
   inputs:
