--- a/k8s/manifests/deployment.yaml
+++ b/k8s/manifests/deployment.yaml
@@ -16,9 +16,9 @@ spec:
     spec:
       containers:
       - name: django-container
-        image: appcontain.azurecr.io/appcontain:latest  # Replace with your Docker images
+        image: appcontain.azurecr.io/loginregistration:latest  # Replace with your Docker images
         ports:
-        - containerPort: 8000
+        - containerPort: 8080
         
         resources:
           limits:
