--- a/azure-pipelines-new.yml
+++ b/azure-pipelines-new.yml
@@ -8,7 +8,7 @@ variables:
   # Define variables
   azureSubscription: 'Azure Resource Manager service connection'  # Azure service connection name
   acrName: 'appcontain'  # ACR name
-  imageName: 'loginregistration'  # Name of your image
+  imageName: 'appcontain/loginregistration'  # Name of your image
   imageTag: '$(Build.BuildId)'  # Use build ID as image tag
   aksResourceGroup: 'Login'  # Resource group containing AKS
   aksClusterName: 'mycluster'  # Name of your AKS cluster
@@ -37,7 +37,7 @@ stages:
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         inlineScript: |
-          az aks install-cli
+        
           # Set the Kubernetes context to the AKS cluster
           az aks get-credentials --resource-group $Login --name $mycluster
           
